refactor folder structure

--- a/src/components/sections/homePage/BottomCTA.astro
+++ b/src/components/sections/homePage/BottomCTA.astro
@@ -1,7 +1,7 @@
 ---
-import CurlyLines from "../icons/CurlyLines.astro";
-import Buttons from "../ui/buttons/Buttons.astro";
-import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
+import CurlyLines from "../../icons/CurlyLines.astro";
+import Buttons from "../../ui/buttons/Buttons.astro";
+import SectionTitleH3 from "../../ui/text/SectionTitleH3.astro";
 
 const colourTextStyles =
   "rounded-xl py-4 text-2xl md:text-4xl  lg:text-5xl font-bold text-center w-[290px] md:w-[578px] lg:w-[796px]";
