--- a/src/components/sections/homePage/DesignAndCodeSection.astro
+++ b/src/components/sections/homePage/DesignAndCodeSection.astro
@@ -1,12 +1,12 @@
 ---
-import DiamondInHands from "../icons/DiamondInHands.astro";
-import Lightning from "../icons/Lightning.astro";
-import Message from "../icons/Message.astro";
-import Sparks from "../icons/Sparks.astro";
-import CodeIllustration from "../illustrations/CodeIllustration.astro";
-import SectionSubtitleP from "../ui/text/SectionSubtitleP.astro";
-import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
-import SmallPargraph from "../ui/text/SmallPargraph.astro";
+import DiamondInHands from "../../icons/DiamondInHands.astro";
+import Lightning from "../../icons/Lightning.astro";
+import Message from "../../icons/Message.astro";
+import Sparks from "../../icons/Sparks.astro";
+import CodeIllustration from "../../illustrations/CodeIllustration.astro";
+import SectionSubtitleP from "../../ui/text/SectionSubtitleP.astro";
+import SectionTitleH3 from "../../ui/text/SectionTitleH3.astro";
+import SmallPargraph from "../../ui/text/SmallPargraph.astro";
 ---
 
 <style>
