--- a/src/components/sections/homePage/GuranteeSection.astro
+++ b/src/components/sections/homePage/GuranteeSection.astro
@@ -1,9 +1,9 @@
 ---
-import Diamond from "../icons/Diamond.astro";
-import Zen from "../icons/Zen.astro";
-import Celebrate from "../illustrations/Celebrate.astro";
-import SectionSubtitleP from "../ui/text/SectionSubtitleP.astro";
-import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
+import Diamond from "../../icons/Diamond.astro";
+import Zen from "../../icons/Zen.astro";
+import Celebrate from "../../illustrations/Celebrate.astro";
+import SectionSubtitleP from "../../ui/text/SectionSubtitleP.astro";
+import SectionTitleH3 from "../../ui/text/SectionTitleH3.astro";
 ---
 
 <style>
