--- a/src/components/sections/homePage/Hero.astro
+++ b/src/components/sections/homePage/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import HeroText from "./HeroText.astro";
-import Buttons from "../ui/buttons/Buttons.astro";
+import HeroText from "../HeroText.astro";
+import Buttons from "../../ui/buttons/Buttons.astro";
 ---
 
 <div class="flex flex-col gap-6 items-center mt-16 lg:mt-24">
