--- a/src/components/sections/homePage/NoTemplateSection.astro
+++ b/src/components/sections/homePage/NoTemplateSection.astro
@@ -1,12 +1,12 @@
 ---
-import Strikethrough from "./Strikethrough.astro";
-import Brain from "../icons/Brain.astro";
-import Commet from "../icons/Commet.astro";
-import Maintenance from "../icons/Maintenance.astro";
-import Success from "../illustrations/Success.astro";
-import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
-import SectionSubtitleP from "../ui/text/SectionSubtitleP.astro";
-import SmallPargraph from "../ui/text/SmallPargraph.astro";
+import Strikethrough from "../Strikethrough.astro";
+import Brain from "../../icons/Brain.astro";
+import Commet from "../../icons/Commet.astro";
+import Maintenance from "../../icons/Maintenance.astro";
+import Success from "../../illustrations/Success.astro";
+import SectionTitleH3 from "../../ui/text/SectionTitleH3.astro";
+import SectionSubtitleP from "../../ui/text/SectionSubtitleP.astro";
+import SmallPargraph from "../../ui/text/SmallPargraph.astro";
 ---
 
 <section>
