--- a/src/components/sections/homePage/Testimonials.astro
+++ b/src/components/sections/homePage/Testimonials.astro
@@ -1,6 +1,6 @@
 ---
-import Arrow from "../icons/Arrow.astro";
-import CurlyArrow from "../icons/CurlyArrow.astro";
+import Arrow from "../../icons/Arrow.astro";
+import CurlyArrow from "../../icons/CurlyArrow.astro";
 ---
 
 <style>
