fix: custom is not a one-off fee

--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -98,6 +98,7 @@ const enterpriseFeatures = [
         nameColour="text-theme-blue"
       />
       <PlanCard
+        isOneOff={false}
         name="Enterprise"
         description="If you are looking for a developer who can build you anything."
         price="Custom"
