--- a/src/components/ui/pricing/PlanCard.astro
+++ b/src/components/ui/pricing/PlanCard.astro
@@ -13,9 +13,17 @@ interface Props {
   description: string;
   price: string;
   features: PlanFeature[];
+  isOneOff?: boolean;
 }
 
-const { name, nameColour, description, features, price } = Astro.props;
+const {
+  name,
+  nameColour,
+  description,
+  features,
+  price,
+  isOneOff = true,
+} = Astro.props;
 ---
 
 <div class="flex flex-col rounded-lg border-2 border-gray-500">
@@ -25,11 +33,13 @@ const { name, nameColour, description, features, price } = Astro.props;
     <h3 class=`${nameColour} text-xl 2xl:text-2xl font-bold`>{name}</h3>
     <p class="text-gray-800 text-center">{description}</p>
   </div>
-  <div class="flex-1 border-t-2 border-gray-500">
+  <div class="h-20 border-t-2 border-gray-500">
     <div class="mt-4 flex flex-col items-center">
       <span class="text-gray-800 font-bold text-3xl 2xl:text-4xl">{price}</span
-      ><span class="text-gray-500 -mt-1">one-time fee</span>
+      >{isOneOff && <span class="text-gray-500 -mt-1">one-off fee</span>}
     </div>
+  </div>
+  <div class="flex-1">
     <ul class="mt-20 mx-5">
       {
         features.map((item) => (
