--- a/src/components/ui/pricing/CheckMarkListItem.astro
+++ b/src/components/ui/pricing/CheckMarkListItem.astro
@@ -52,7 +52,7 @@ const { text, tooltip } = Astro.props;
       tooltips.forEach((tooltip) => {
         const tooltipContent = tooltip.querySelectorAll("span");
         tooltipContent[1]?.classList.remove("group-hover:inline-block");
-        tooltipContent[1]?.classList.remove("group-focus:inline-block");
+        tooltipContent[1]?.classList.remove("lg:group-focus:inline-block");
       });
     }
   });
