--- a/src/components/ui/pricing/CheckMarkListItem.astro
+++ b/src/components/ui/pricing/CheckMarkListItem.astro
@@ -21,7 +21,7 @@ const { text, tooltip } = Astro.props;
           <span>
             <QuestionMark styles="w-5 h-5 fill-gray-400" />
           </span>
-          <span class="z-50 hidden lg:group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
+          <span class="z-50 hidden group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
             {tooltip}
           </span>
         </>
@@ -33,27 +33,30 @@ const { text, tooltip } = Astro.props;
 <script>
   //following accesibility rule here https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/tooltip_role
 
-  // const tooltips = document.querySelectorAll('[role="tooltip"]');
+  const tooltips = document.querySelectorAll('[role="tooltip"]');
 
-  // tooltips.forEach((tooltip) => {
-  //   const tooltipContent = tooltip.querySelectorAll("span");
+  tooltips.forEach((tooltip) => {
+    const tooltipContent = tooltip.querySelectorAll("span");
 
-  //   tooltip.addEventListener("mouseenter", () => {
-  //     tooltipContent[1]?.classList.add("group-hover:inline-block");
-  //   });
+    tooltip.addEventListener("mouseenter", () => {
+      tooltipContent[1]?.classList.add("group-hover:inline-block");
+    });
 
-  //   tooltip.addEventListener("focus", () => {
-  //     tooltipContent[1]?.classList.add("lg:group-focus:inline-block");
-  //   });
-  // });
+    tooltip.addEventListener("focus", () => {
+      tooltipContent[1]?.classList.add("group-focus:inline-block");
+    });
+    tooltip.addEventListener("mouseleave", () => {
+      tooltipContent[1]?.classList.remove("group-hover:inline-block");
+    });
+  });
 
-  // document.addEventListener("keydown", (e) => {
-  //   if (e.key === "Escape") {
-  //     tooltips.forEach((tooltip) => {
-  //       const tooltipContent = tooltip.querySelectorAll("span");
-  //       tooltipContent[1]?.classList.remove("group-hover:inline-block");
-  //       tooltipContent[1]?.classList.remove("lg:group-focus:inline-block");
-  //     });
-  //   }
-  // });
+  document.addEventListener("keydown", (e) => {
+    if (e.key === "Escape") {
+      tooltips.forEach((tooltip) => {
+        const tooltipContent = tooltip.querySelectorAll("span");
+        tooltipContent[1]?.classList.remove("group-hover:inline-block");
+        tooltipContent[1]?.classList.remove("group-focus:inline-block");
+      });
+    }
+  });
 </script>
