--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -32,7 +32,10 @@ const plusFeatures = [
   },
   { text: "Design mockups" },
   { text: "Full SEO" },
-  { text: "1-2 custom functionalities" },
+  {
+    text: "1-2 custom functionalities",
+    tooltip: "E.g. login portal, search engine, and AI chatbot.",
+  },
 ];
 const proFeatures = [
   { text: "Everything in Plus" },
