--- a/src/components/ui/pricing/CheckMarkListItem.astro
+++ b/src/components/ui/pricing/CheckMarkListItem.astro
@@ -21,7 +21,7 @@ const { text, tooltip } = Astro.props;
           <span>
             <QuestionMark styles="w-5 h-5 fill-gray-400" />
           </span>
-          <span class="z-50 hidden right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
+          <span class="z-50 hidden group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
             {tooltip}
           </span>
         </>
@@ -38,18 +38,12 @@ const { text, tooltip } = Astro.props;
   tooltips.forEach((tooltip) => {
     const tooltipContent = tooltip.querySelectorAll("span");
 
-    ["touchstart", "mouseenter", "focus"].forEach((event) => {
-      tooltip.addEventListener(event, () => {
-        tooltipContent[1]?.classList.remove("hidden");
-        tooltipContent[1]?.classList.add("inline-block");
-      });
+    tooltip.addEventListener("mouseenter", () => {
+      tooltipContent[1]?.classList.add("group-hover:inline-block");
     });
 
-    ["touchend", "mouseleave", "blur"].forEach((event) => {
-      tooltip.addEventListener(event, () => {
-        tooltipContent[1]?.classList.add("hidden");
-        tooltipContent[1]?.classList.remove("inline-block");
-      });
+    tooltip.addEventListener("focus", () => {
+      tooltipContent[1]?.classList.add("group-focus:inline-block");
     });
   });
 
@@ -57,9 +51,20 @@ const { text, tooltip } = Astro.props;
     if (e.key === "Escape") {
       tooltips.forEach((tooltip) => {
         const tooltipContent = tooltip.querySelectorAll("span");
-        tooltipContent[1]?.classList.remove("inline-block");
-        tooltipContent[1]?.classList.add("hidden");
+        tooltipContent[1]?.classList.remove("group-hover:inline-block");
+        tooltipContent[1]?.classList.remove("group-focus:inline-block");
       });
     }
+  });
+  
+  //fix safari hover problem on mobile
+  document.addEventListener("click", (e) => {
+    tooltips.forEach((tooltip) => {
+      if (e.target !== tooltip) {
+        const tooltipContent = tooltip.querySelectorAll("span");
+        tooltipContent[1]?.classList.remove("group-hover:inline-block");
+        tooltipContent[1]?.classList.remove("group-focus:inline-block");
+      }
+    });
   });
 </script>
