fix hover safari bug

--- a/src/components/sections/homePage/Hero.astro
+++ b/src/components/sections/homePage/Hero.astro
@@ -16,7 +16,7 @@ import Buttons from "../../ui/buttons/Buttons.astro";
   </h2>
   <div class="flex gap-4">
     <Buttons buttonType="primary" text="Contact me" href="/contact-me" />
-    <Buttons buttonType="secondary" text="Pricing" href="/" />
+    <Buttons buttonType="secondary" text="Pricing" href="/pricing/websites" />
   </div>
   <div class="flex gap-4 items-center">
     <span class="relative flex h-3 w-3">
