test: what is firing on mobile screens

--- a/src/components/ui/pricing/CheckMarkListItem.astro
+++ b/src/components/ui/pricing/CheckMarkListItem.astro
@@ -44,6 +44,7 @@ const { text, tooltip } = Astro.props;
 
     tooltip.addEventListener("focus", () => {
       tooltipContent[1]?.classList.add("group-focus:inline-block");
+      tooltipContent[1]?.classList.add("bg-red-200");
     });
   });
 
