change heading tags for pricing

--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -65,9 +65,9 @@ const enterpriseFeatures = [
     <h1 class="font-bold text-center text-6xl md:text-7xl xl:text-8xl">
       Pricing
     </h1>
-    <h2 class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
+    <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
       Transparent and simple pricing. No surprises.
-    </h2>
+    </p>
     <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
       <span>Looking for</span>
       <a
