--- a/src/pages/pricing/ecommerce.astro
+++ b/src/pages/pricing/ecommerce.astro
@@ -62,9 +62,9 @@ const enterpriseFeatures = [
     <h1 class="font-bold text-center text-4xl md:text-7xl xl:text-8xl">
       E-commerce Pricing
     </h1>
-    <h2 class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
+    <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
       Transparent and simple pricing. No surprises.
-    </h2>
+    </p>
     <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
       <span>Looking for</span>
       <a
