--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -1,6 +1,9 @@
 ---
 import PageLayout from "../../layout/PageLayout.astro";
 import PlanCard from "../../components/ui/pricing/PlanCard.astro";
+import CardHeading from "../../components/ui/pricing/CardHeading.astro";
+import FeatureTable from "../../components/ui/pricing/FeatureTable.astro";
+import FeatureCardWrapper from "../../components/ui/pricing/FeatureCardWrapper.astro";
 
 const starterFeatures = [
   {
@@ -55,6 +58,13 @@ const enterpriseFeatures = [
   { text: "Mobile app development" },
   { text: "Minimum viable product development" },
 ];
+
+const customFunctionalitiesExamples = [
+  "Login portal",
+  "Search engine",
+  "Booking system",
+  "AI chatbot",
+];
 ---
 
 <PageLayout
@@ -108,6 +118,158 @@ const enterpriseFeatures = [
         features={enterpriseFeatures}
         nameColour="text-theme-purple"
       />
+    </div>
+    <h2 class="mt-20 font-bold text-center text-5xl md:text-6xl xl:text-7xl">
+      Which plan will I need?
+    </h2>
+    <div class="grid grid-cols-1 justify-items-center">
+      <FeatureCardWrapper>
+        <CardHeading
+          name="Number of pages"
+          nameSize="text-2xl md:text-3xl lg:text-4xl"
+          nameColour="text-gray-800"
+          description="Count pages with unique designs, not the total number."
+          descriptionColour="text-gray-500"
+        />
+        <div class="border-t-2 border-gray-500 mb-10">
+          <FeatureTable
+            col2Heading="Unique designs"
+            col3Heading="Shared designs"
+            row1Col1="Starter"
+            row1Col2="Up to 3 pages"
+            row1Col3="Unlimited"
+            row2Col1="Plus"
+            row2Col2="Up to 6 pages"
+            row2Col3="Unlimited"
+            row3Col1="Pro"
+            row3Col2="Up to 10 pages"
+            row3Col3="Unlimited"
+          />
+        </div>
+        <div
+          class="border-t-2 px-3 md:px-10 lg:px-20 border-gray-500 flex flex-col items-center"
+        >
+          <div class="mt-5">
+            <span class="text-xl text-gray-800 text-center">For example:</span>
+          </div>
+          <ul class="mt-3 list-inside text-center lg:text-left">
+            <li class="list-disc">
+              <span class="text-gray-700">Blog Pages:</span>
+              <span class="text-gray-500">
+                If you have a blog with multiple posts or articles, it will be
+                counted as one page as long as they share a design.
+              </span>
+            </li>
+            <li class="mt-2 list-disc text-gray-700">
+              <span class="text-gray-700">Department Pages:</span>
+              <span class="text-gray-500">
+                For businesses with multiple departments or divisions, each
+                department page that uses the same design will be counted as one
+                page.</span
+              >
+            </li>
+          </ul>
+        </div>
+      </FeatureCardWrapper>
+      <FeatureCardWrapper>
+        <CardHeading
+          name="Custom functionalities"
+          nameSize="text-2xl md:text-3xl lg:text-4xl"
+          nameColour="text-gray-800"
+          description="Things that make your website behave more like a web app."
+          descriptionColour="text-gray-500"
+        />
+        <div class="border-t-2 border-gray-500 mb-10">
+          <FeatureTable
+            col2Heading="Number of custom functionalities"
+            row1Col1="Starter"
+            row1Col2="None"
+            row2Col1="Plus"
+            row2Col2="Up to 2, depending on complexity"
+            row3Col1="Pro"
+            row3Col2="Up to 4, depending on complexity"
+          />
+        </div>
+        <div
+          class="border-t-2 px-3 md:px-10 lg:px-20 border-gray-500 flex flex-col items-center"
+        >
+          <div class="mt-5">
+            <span class="text-center text-xl text-gray-800">Examples:</span>
+          </div>
+          <ul class="list-inside text-center lg:text-left">
+            {
+              customFunctionalitiesExamples.map((item) => (
+                <li class="mt-2 list-disc text-gray-700">
+                  <span class="text-gray-500">{item}</span>
+                </li>
+              ))
+            }
+          </ul>
+          <div class="mt-5 flex justify-center">
+            <span class="text-center text-base text-gray-500"
+              >Enquiry forms and animations don't count as custom
+              functionalities.</span
+            >
+          </div>
+        </div>
+      </FeatureCardWrapper>
+      <FeatureCardWrapper>
+        <CardHeading
+          name="Design"
+          nameSize="text-2xl md:text-3xl lg:text-4xl"
+          nameColour="text-gray-800"
+        />
+        <div class="border-t-2 border-gray-500 mb-10">
+          <FeatureTable
+            isOneRowOneCell={true}
+            col2Heading="Design style"
+            row1Col1="Starter"
+            row1Col2="Clean and modern designs that focus on simplicity and usability"
+            row2Col1="Plus"
+            row2Col2="Engaging designs reflecting your brand with thought-out animations"
+            row3Col1="Pro"
+            row3Col2="Engaging designs as Plus, scaled to more pages and content"
+          />
+          <FeatureTable
+            isOneRowOneCell={true}
+            col2Heading="Design meetings"
+            row1Col1="Starter"
+            row1Col2="One 1 hour meeting to agree on design directions."
+            row2Col1="Plus"
+            row2Col2="One meeting per week to identify brand identity and share design mock ups."
+            row3Col1="Pro"
+            row3Col2="Also weekly meetings as Plus. This results in more total meetings as project will run longer. "
+          />
+          <FeatureTable
+            isOneRowOneCell={true}
+            col2Heading="Web animation"
+            row1Col1="Starter"
+            row1Col2="Used for visual feedback, e.g. when a user clicks or hovers on a button."
+            row2Col1="Plus"
+            row2Col2="Used for storytelling, e.g. scroll animation, animated icons, illustration animations."
+            row3Col1="Pro"
+            row3Col2="Also used for storytelling, scaled to more content and pages."
+          />
+        </div>
+        <div
+          class="border-t-2 px-3 md:px-10 lg:px-20 border-gray-500 flex flex-col items-center"
+        >
+          <div class="mt-5 text-gray-500 text-center">
+            <span
+              >The Starter plan focuses on delivering a modern website within a
+              short turnaround time.
+            </span>
+          </div>
+          <div class="mt-5 text-base text-gray-500 text-center">
+            <span
+              >The Plus and Pro plan focus on crafting a unique and engaging
+              website that truly represents your brand. The design process
+              therefore includes weekly meetings to identify brand identity and
+              share design mock ups.
+            </span>
+          </div>
+        </div>
+      </FeatureCardWrapper>
     </div>
   </main>
 </PageLayout>
