--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -163,9 +163,9 @@ const customFunctionalitiesExamples = [
             <li class="mt-2 list-disc text-gray-700">
               <span class="text-gray-700">Department Pages:</span>
               <span class="text-gray-500">
-                For businesses with multiple departments or divisions, each
-                department page that uses the same design will be counted as one
-                page.</span
+                For businesses with multiple departments or divisions,
+                department pages that uses the same design will be counted as
+                one page.</span
               >
             </li>
           </ul>
