--- a/src/components/ui/text/SectionSubtitleP.astro
+++ b/src/components/ui/text/SectionSubtitleP.astro
@@ -1,5 +1,5 @@
 <p
-  class="mt-2 lg:text-lg max-w-xs xl:max-w-2xl 2xl:max-w-3xl text-center text-gray-500"
+  class="mt-2 lg:text-lg max-w-xs md:max-w-lg lg:max-w-xl xl:max-w-2xl 2xl:max-w-3xl text-center text-gray-500"
 >
   <slot />
 </p>
