restyle: hero spacing and casing

--- a/src/components/sections/HeroText.astro
+++ b/src/components/sections/HeroText.astro
@@ -7,7 +7,7 @@
       #5083ff 48.44%,
       #ff660b 100%
     );
-    animation: shine 8s ease infinite;
+    animation: shine 8s ease-in infinite;
   }
   @keyframes shine {
     0% {
@@ -23,7 +23,7 @@
 </style>
 
 <h1
-  class="text-6xl md:text-7xl xl:text-8xl rainbow xl:max-w-5xl 2xl:max-w-7xl py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
+  class="uppercase text-5xl md:text-6xl lg:text-7xl xl:text-8xl rainbow lg:max-w-5xl xl:max-w-7xl 2xl:max-w-8xl py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
 >
   Websites built with custom design and code
 </h1>
