restyle: increase size feature table headings

--- a/src/components/ui/pricing/FeatureTable.astro
+++ b/src/components/ui/pricing/FeatureTable.astro
@@ -43,12 +43,12 @@ const cellTextColour = "text-gray-500";
         isTwoCols ? "col-span-2" : "col-start-2"
       } text-center lg:text-left`}
     >
-      <span class="2xl:text-lg text-gray-800">{col2Heading}</span>
+      <span class="text-lg text-gray-800">{col2Heading}</span>
     </div>
     {
       isThreeCols && (
         <div class="col-start-3 text-center lg:text-left">
-          <span class="2xl:text-lg text-gray-800">{col3Heading}</span>
+          <span class="text-lg text-gray-800">{col3Heading}</span>
         </div>
       )
     }
