add text about enquiry forms

--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -154,13 +154,13 @@ const customFunctionalitiesExamples = [
           </div>
           <ul class="mt-3 list-inside text-center lg:text-left">
             <li class="list-disc">
-              <span class="text-gray-700">Blog Pages:</span>
+              <span class="text-gray-800">Blog Pages:</span>
               <span class="text-gray-500">
                 If you have a blog with multiple posts or articles, it will be
                 counted as one page as long as they share a design.
               </span>
             </li>
-            <li class="mt-2 list-disc text-gray-700">
+            <li class="mt-2 list-disc text-gray-800">
               <span class="text-gray-700">Department Pages:</span>
               <span class="text-gray-500">
                 For businesses with multiple departments or divisions,
@@ -169,6 +169,10 @@ const customFunctionalitiesExamples = [
               >
             </li>
           </ul>
+          <p class="mt-4 text-center lg:text-left text-gray-500">
+            An enquiry form (included in all plans) does not count as a page, if
+            you wish to put it on a seperate page.
+          </p>
         </div>
       </FeatureCardWrapper>
       <FeatureCardWrapper>
