--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -6,7 +6,7 @@ import HamburgerMenu from "./HamburgerMenu.astro";
 ---
 
 <header class="px-5 lg:px-20 z-50 sticky top-0 backdrop-blur-sm pt-7 pb-5">
-  <nav class="flex justify-between items-center">
+  <nav role="navigation" aria-label="navigation menu" class="flex justify-between items-center">
     <div class="flex items-center gap-8">
       <a href="/">
         <Logo styles="w-12 h-auto lg:w-16" />
@@ -26,6 +26,8 @@ import HamburgerMenu from "./HamburgerMenu.astro";
     <HamburgerMenu />
   </nav>
   <nav
+    id="mobile-nav-menu"
+    role="navigation"
     aria-label="mobile nav menu"
     class="z-50 h-screen overflow-y-auto bg-white mt-5 mobile-nav-menu absolute hidden w-full"
   >
