--- a/src/components/ui/pricing/PlanCard.astro
+++ b/src/components/ui/pricing/PlanCard.astro
@@ -6,6 +6,7 @@ import CheckMarkListItem from "./CheckMarkListItem.astro";
 interface PlanFeature {
   text: string;
   tooltip?: string;
+  ariaDescribedBy?:string
 }
 
 interface Props {
@@ -45,7 +46,7 @@ const {
     <ul class="mt-20 mx-5">
       {
         features.map((item) => (
-          <CheckMarkListItem text={item.text} tooltip={item.tooltip} />
+          <CheckMarkListItem text={item.text} tooltip={item.tooltip} ariaDescribedBy={item.ariaDescribedBy} />
         ))
       }
     </ul>
