--- a/src/components/ui/pricing/CheckMarkListItem.astro
+++ b/src/components/ui/pricing/CheckMarkListItem.astro
@@ -5,8 +5,9 @@ import QuestionMark from "../../icons/QuestionMark.astro";
 interface Props {
   text: string;
   tooltip?: string | undefined;
+  ariaDescribedBy?: string | undefined;
 }
-const { text, tooltip } = Astro.props;
+const { text, tooltip, ariaDescribedBy } = Astro.props;
 ---
 
 <li class="mt-2 flex justify-between text-gray-800">
@@ -14,14 +15,14 @@ const { text, tooltip } = Astro.props;
     <span><CheckMark styles="w-5 h-5 fill-gray-800" /></span>
     <span class="ml-3">{text}</span>
   </span>
-  <button role="tooltip" class="ml-2 relative group">
+  <button aria-label="tool-tip" aria-describedby={ariaDescribedBy} role="tooltip" class="ml-2 relative group">
     {
       tooltip && (
         <>
           <span>
             <QuestionMark styles="w-5 h-5 fill-gray-400" />
           </span>
-          <span class="z-50 hidden group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
+          <span id={ariaDescribedBy} class="z-50 hidden group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
             {tooltip}
           </span>
         </>
