--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -5,6 +5,24 @@ import Buttons from "./buttons/Buttons.astro";
 import HamburgerMenu from "./HamburgerMenu.astro";
 ---
 
+<style>
+  .animate-fade-in {
+  animation: fade-in ease 0.7s;
+  animation-iteration-count: 1;
+}
+
+@keyframes fade-in {
+  0% {
+    transform: translateY(40px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+</style>
+
+
 <header class="px-5 lg:px-20 z-50 sticky top-0 backdrop-blur-sm pt-7 pb-5">
   <nav role="navigation" aria-label="navigation menu" class="flex justify-between items-center">
     <div class="flex items-center gap-8">
@@ -29,7 +47,7 @@ import HamburgerMenu from "./HamburgerMenu.astro";
     id="mobile-nav-menu"
     role="navigation"
     aria-label="mobile nav menu"
-    class="z-50 h-screen overflow-y-auto bg-white mt-5 mobile-nav-menu absolute hidden w-full"
+    class="z-50 left-0 h-screen overflow-y-auto bg-white mt-5 mobile-nav-menu absolute hidden w-full"
   >
     <ul class="flex flex-col items-center">
       <li class="mt-20">
