--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -22,7 +22,7 @@ const customFunctionalitiesExamples = [
   title="Pricing Plans - Freelance Web development"
   description="Transparent and simple pricing. No surprises. Choose the plan right for you."
 >
-  <main class="mt-10 mx-6 lg:mx-8 min-h-screen">
+  <main class="mt-10 mx-6 lg:mx-8">
     <h1 class="font-bold text-center text-6xl md:text-7xl xl:text-8xl">
       Pricing
     </h1>
