fix styling error on plan headings

--- a/src/components/ui/pricing/FeatureTable.astro
+++ b/src/components/ui/pricing/FeatureTable.astro
@@ -55,7 +55,7 @@ const cellTextColour = "text-gray-500";
   </div>
   <div class={rowStyle}>
     <div class={colStyle}>
-      <span class="font-bold text-theme-red lg:text-xl">{row1Col1}</span>
+      <span class="font-bold text-theme-red text-xl">{row1Col1}</span>
     </div>
     <div class={colStyle}>
       <span class={cellTextColour}>{row1Col2}</span>
