--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -6,8 +6,12 @@ import FeatureTable from "../../components/ui/pricing/FeatureTable.astro";
 import FeatureCardWrapper from "../../components/ui/pricing/FeatureCardWrapper.astro";
 import Accordion from "../../components/ui/Accordion";
 import { faqs } from "../../const/pricingFaqs";
-import { starterFeatures, plusFeatures, proFeatures, enterpriseFeatures } from "../../const/planFeatures";
-
+import {
+  starterFeatures,
+  plusFeatures,
+  proFeatures,
+  enterpriseFeatures,
+} from "../../const/planFeatures";
 
 const customFunctionalitiesExamples = [
   "Login portal",
@@ -15,7 +19,6 @@ const customFunctionalitiesExamples = [
   "Booking system",
   "AI chatbot",
 ];
-
 ---
 
 <PageLayout
