--- a/src/components/ui/pricing/CheckMarkListItem.astro
+++ b/src/components/ui/pricing/CheckMarkListItem.astro
@@ -15,14 +15,22 @@ const { text, tooltip, ariaDescribedBy } = Astro.props;
     <span><CheckMark styles="w-5 h-5 fill-gray-800" /></span>
     <span class="ml-3">{text}</span>
   </span>
-  <button aria-label="tool-tip" aria-describedby={ariaDescribedBy} role="tooltip" class="ml-2 relative group">
+  <button
+    aria-label="tool-tip"
+    aria-describedby={ariaDescribedBy}
+    role="tooltip"
+    class="ml-2 relative group"
+  >
     {
       tooltip && (
         <>
           <span>
             <QuestionMark styles="w-5 h-5 fill-gray-400" />
           </span>
-          <span id={ariaDescribedBy} class="z-50 hidden group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl">
+          <span
+            id={ariaDescribedBy}
+            class="z-50 hidden group-focus:inline-block group-hover:inline-block right-3 xl:left-6 absolute border-[1px] border-gray-400 w-60 p-3 rounded-lg backdrop-blur-xl"
+          >
             {tooltip}
           </span>
         </>
